--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,18 @@
 body {
   @apply font-sans;
 }
+
+input[type='number'] {
+  @apply px-3 py-2 w-[56px] appearance-none;
+}
+
+.button {
+}
+
+[data-card] {
+  @apply bg-black p-3;
+}
+
+[data-card-letter] {
+  @apply bg-white w-[60px] h-[60px] flex items-center justify-center;
+}
