--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,18 +1,43 @@
 body {
   @apply font-sans;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #000000;
+}
+//Typography
+h1 {
+  @apply font-serif;
+  font-size: 48px;
+  line-height: 63px;
+  font-weight: 700;
 }
 
 input[type='number'] {
-  @apply px-3 py-2 w-[56px] appearance-none;
+  @apply px-3 py-2 w-[56px] mx-2 appearance-none rounded;
+  border: 1px solid #ced4da;
 }
 
 .button {
+  @apply font-serif text-white px-3 py-2 rounded;
+  background: #0d6efd;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+[data-generator-form] {
+  @apply bg-white p-3 rounded;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 [data-card] {
-  @apply bg-black p-3;
+  @apply bg-black p-3 m-4;
 }
 
 [data-card-letter] {
-  @apply bg-white w-[60px] h-[60px] flex items-center justify-center;
+  @apply font-serif bg-white w-[60px] h-[60px] flex items-center justify-center;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 47px;
 }
